--- a/static/styles.css
+++ b/static/styles.css
@@ -1,4 +1,4 @@
-# Card styling
+# CardStyling
 
 .card {
     background: #ffffff;
@@ -11,7 +11,7 @@
     color: #000000;
 }
 
-# weather header styling
+# weatherHeaderStyling
 
 .weather-header {
     font-size: 18px;
